fixed overflow text checkout button

--- a/src/Model/components/RightSidebar/RightSidebar.css
+++ b/src/Model/components/RightSidebar/RightSidebar.css
@@ -37,8 +37,9 @@
     -fx-background-radius: 8;
     -fx-background-insets: -2;
     -fx-text-fill: white;
-    -fx-font-size: 30;
+    -fx-font-size: 24;
     -fx-background-color: #189ad3;
+    -fx-alignment: center;
 }
 
 .btn-checkout:hover{
